--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "redis-dataloader",
-  "version": "1.0.2",
+  "version": "1.0.0",
   "description": "DataLoader Using Redis as a Cache",
   "main": "index.js",
   "scripts": {
-    "test": "mocha test/**/*.unit.js"
+    "build": "tsc"
   },
   "repository": {
     "type": "git",
-    "url": "git+ssh://git@github.com/PatrickJS/redis-dataloader.git"
+    "url": "git@github.com:midwest-tape/redis-dataloader.git"
   },
   "keywords": [
     "GraphQL",
@@ -19,25 +19,33 @@
     "Facebook"
   ],
   "contributors": [
-    "Brian Detering <BDeterin@gmail.com>",
-    "PatrickJS <github@patrickjs.com>"
+    "James Cole <mail@ofjamescole.com>"
   ],
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/PatrickJS/redis-dataloader/issues"
+    "url": "https://github.com/midwest-tape/redis-dataloader/issues"
   },
-  "homepage": "https://github.com/PatrickJS/redis-dataloader#readme",
+  "homepage": "https://github.com/midwest-tape/redis-dataloader#readme",
   "dependencies": {
+    "@redis/client": "^1.5.12",
     "dataloader": "^2.0.0",
     "json-stable-stringify": "^1.0.1",
-    "lodash": "^4.17.2"
+    "lodash": "^4.17.2",
+    "redis": "^4.1.0"
   },
   "devDependencies": {
+    "@types/json-stable-stringify": "^1.0.36",
+    "@types/lodash": "^4.14.202",
+    "@types/node": "^20.10.4",
     "chai": "^3.5.0",
     "chai-as-promised": "^7.1.1",
     "mocha": "^8.1.1",
-    "redis": "^3.1.1",
     "redis-mock": "^0.51.0",
-    "sinon": "^1.17.6"
-  }
+    "sinon": "^1.17.6",
+    "typescript": "^5.3.2"
+  },
+  "directories": {
+    "test": "test"
+  },
+  "author": ""
 }
